@@ -23,6 +23,7 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-3145] fixed user macros resolving (Vedmak)
  - [ZBX-3215] fixed filtering by group in trigger selection popup (Vedmak)
  - [ZBX-3144] removed parsiing of exisiting expression in trigger expression popup (Vedmak)
  - [ZBX-3207] fixed possibility to click on web items in trigger expressions (Vedmak)
